# PrimerDesigner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/primerdesigner/: __init__.py  primerdesigner.py
src/primerdesigner/data/: chr2acc.txt
tests/: __init__.py  test_fromCoordinates.fasta  test_fromCoordinates_minus.fasta  test_fromCoordinates_plus.fasta  test_fromSJDataset.csv  test_primerdesigner.py
